# tree-sitter-symon

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-symon.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_symon/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSymon/: symon.h
bindings/swift/TreeSitterSymonTests/: TreeSitterSymonTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: concat_plus.symon  concat_star.symon  example.symon  string_assignment.symon  time_restriction_concat.symon
