[package]
name = "tree-sitter-symon"
description = "High-level language for a symbolic monitor --- SyMon"
version = "0.0.1"
authors = ["Masaki Waga <masakiwaga@gmail.com>"]
license = "GPLv3"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "symon"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/maswag/symon"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.4"
