[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-symon"
description = "High-level language for a symbolic monitor --- SyMon"
version = "0.0.1"
keywords = ["incremental", "parsing", "tree-sitter", "symon"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Masaki Waga", email = "masakiwaga@gmail.com" }]
requires-python = ">=3.10"
license.text = "GPLv3"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/maswag/symon"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
